# discord-bot

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  Procfile  discordbot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
bot/: Dockerfile  __main__.py  main.py  requirements.txt  settings.py
bot/cogs/: affirm.py  calc.py  dice.py  general.py  settings.py
bot/docs/: dice.lark  messages.csv
bot/settings/: __init__.py
cogs/: affirm.py  calc.py  dice.py  general.py  messages.csv  messages.txt  testcog.py
docs/: calc.lark  dice.lark  messages.csv
mongo/: createUser.js
