[tool.poetry]
name = "discord-bot"
version = "0.0.1"
description = ""
authors = ["Hibiki(4513ECHO) <mail@4513echo.dev>"]
license = "MIT"
repository = "https://github.com/4513ECHO/discord-bot"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {extras = ["speed", "voice"], version = "^2.0.0"}
dispander = "^0.5.0"
dnspython = "^2.2.1"
jishaku = "^2.5.0"
lark-parser = "^0.12.0"
motor = "^3.0.0"
PyNaCl = "^1.5.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.0"
mypy = "^0.971"
flake8 = "^5.0.0"
flake8-pyproject = "^1.1.0"
motor-stubs = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
py_version = 37
profile = "black"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
pretty = true
strict = true

[tool.flake8]
indent-size = 4
max-line-length = 120
