[tool.poetry]
name = "discord-bot"
version = "0.0.1"
description = ""
authors = ["Hibiki(4513ECHO) <mail@4513echo.dev>"]
license = "MIT"
repository = "https://github.com/4513ECHO/discord-bot"

[tool.poetry.dependencies]
python = "^3.9"
discord-py = {extras = ["speed", "voice"], version = "^2.2.3"}
dispander = "^0.5.0"
dnspython = "^2.3.0"
jishaku = "^2.5.1"
lark-parser = "^0.12.0"
motor = "^3.1.2"
PyNaCl = "^1.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
motor-stubs = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
py_version = 37
profile = "black"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
pretty = true
strict = true

[tool.flake8]
indent-size = 4
max-line-length = 120
